# dxfio-rs

./: .gitignore  Cargo.toml
examples/: dxf2svg.rs  geom2d.rs  main.rs  to-nodes-yaml.rs  to-yaml.rs
src/: atom.rs  lib.rs  node.rs  value.rs
src/drawing/: entity.rs  mod.rs  table.rs
src/model/: data.rs  entity.rs  mod.rs  mtext_format.rs  table.rs  text_format.rs
src/parser/: atom.rs  block.rs  data.rs  drawing.rs  entity.rs  mod.rs  node.rs  table.rs  text_format.rs
