[package]
name = "dxfio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.28"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.28"

[dev-dependencies]
serde_json = "1.0.67"
serde_yaml = "0.8.20"
env_logger = "0.9.0"
svg = "0.10.0"

[[example]]
name = "main"

[[example]]
name = "to-nodes-yaml"

[[example]]
name = "to-yaml"

[[example]]
name = "dxf2svg"
